--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,12 +5,13 @@
       <h1 class="text-center mt-4">To Do List</h1>
       <div div class="row">
       <div class='col-12 mb-5'>
-        <input class='col-9'></input>
-        <button class='col-2'>Add Task</button>
+      <form id="post-task">
+        <input id="input" type="text" class='col-9'>
+        <input id="submit" type="submit" class='col-2' value="Add Task">
+      </form>
       </div>
-      <h3 class='col-7'>Task</h3>
-      <h3 class='col-3'></h3>
-      <h3 class='col-2 justify-content-center'>Completed</h3>
+      <h3 class='col-12'>Task</h3>
+
         <div class="col-12">
           <div id="tasks"></div>
         </div>
